<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutIpv4"
        android:layout_width="350dp"
        android:layout_height="65dp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutPort"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextIpv4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ipv4"
            android:textColorHint="#9E9E9E" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPort"
        android:layout_width="350dp"
        android:layout_height="65dp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextPort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/port"
            android:textColorHint="#9E9E9E" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutMessage"
        android:layout_width="350dp"
        android:layout_height="65dp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutHeavy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/message"
            android:textColorHint="#78909C" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutHeavy"
        android:layout_width="350dp"
        android:layout_height="65dp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutIteration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextHeavy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/heavy"
            android:textColorHint="#9E9E9E" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutIteration"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSendUdpPacket"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextIteration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/iteration"
            android:textColorHint="#78909C" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonSendUdpPacket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/send_udp_packet"
        app:layout_constraintBottom_toTopOf="@+id/scrollViewLogs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scrollViewLogs"
        android:layout_width="354dp"
        android:layout_height="200dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/linearLayoutLogs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewLogsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logs"
                android:textAlignment="center"
                android:textColor="#9E9E9E" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>